# cake-markdown-editor

./: Cargo.toml  readme.md
data/: style.css
src/: main.rs  markdown_parser.rs  style.css
src/windows/: main_window.rs
